--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lab_5</string>
     <string name="action_login">Login</string>
     <string name="action_settings">Settings</string>
+    <string name="action_exportCSV">Export CSV</string>
 </resources>
